welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: value update is not a member of java.awt.Color
    		if(getCouleurSol()=Color.green)
                   ^SlugTracking:15: error: not found: value rcule
    			rcule()
                        ^